# netdebug

./: .clang-format  .dockerignore  .git-commit-template  .gitattributes  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  TODO  TODO.md  TODO_webserver.md  build.rs  build.sh  clean.sh  config.toml  cut-desktop-release.sh  fly.toml  format.sh  mac-os-universal-build.sh  run_local_dev.sh  setup-git-clone.sh  test.sh  update_and_run_prod.sh  x  y
WIP/netdebug-desktop/src-tauri/: Cargo.toml  tauri.conf.json
WIP/netdebug-desktop/src-tauri/src/: main.rs
common/: Cargo.toml
common/examples/: init-example-log.rs  init-example-panic.rs
common/gui_types/: Cargo.toml  build.rs
common/gui_types/src/: lib.rs
common/src/: init.rs  lib.rs  rate_limit.rs  test_utils.rs
common/src/os_abstraction/: mod.rs  unix.rs  windows.rs
common/wasm/: Cargo.toml
common/wasm/src/: analysis_messages.rs  evicting_hash_map.rs  lib.rs  stats_helper.rs  timeseries_stats.rs  topology_server_messages.rs  wasm_perf_check.rs
desktop/: .taurignore  Cargo.toml  build.rs
desktop/desktop_common/: Cargo.toml  build.rs
desktop/desktop_common/src/: lib.rs
desktop/html/: index.html  tabs.css
desktop/src/: app.rs  main.rs  rest_endpoints.rs  topology_client.rs  websocket.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/web-gui/: Cargo.toml
desktop/web-gui/js/: utils.js
desktop/web-gui/src/: bandwidth_graph.rs  dns_tracker.rs  flow_tracker.rs  lib.rs  stat_counters.rs  tabs.rs  utils.rs
ip-asn-lookup/: Cargo.toml  README.MD
ip-asn-lookup/src/: lib.rs  lookup-ip.rs  mrt2csv.rs
libconntrack/: Cargo.toml  build.rs
libconntrack-wasm/: Cargo.toml  README.md  build.rs
libconntrack-wasm/src/: aggregate_counters.rs  connection_key.rs  connection_measurements.rs  lib.rs  measurements.proto  topology_server_messages.rs  traffic_stats.rs
libconntrack-wasm/tests/: dns_cache.json  dns_entry_json.txt  serde.rs
libconntrack/examples/: connection_storage_helper_tester.rs
libconntrack/src/: analyze.rs  connection.rs  connection_storage_handler.rs  connection_tracker.rs  dns_tracker.rs  in_band_probe.rs  lib.rs  neighbor_cache.rs  owned_packet.rs  pcap.rs  pingtree.rs  prober.rs  prober_helper.rs  process_tracker.rs  system_tracker.rs  tcp_sequence.rs  topology_client.rs  unidirectional_tcp_state.rs  utils.rs
libconntrack/tests/: arp_capture.pcap  aws-sfc-to-turkey-psh-dup-ack-sack-ones-stream.pcap  aws-sjc-ist.pcap  conn-syn-and-single-fin.pcap  conn-syn-and-single-rst.pcap  connection_storage_test.rs  dns_ptr.pcap  dns_traces.pcap  fin-retransmit.pcap  icmp6_echo_working.pcapng  ipv6_malformed_plen_zero.pcapng  ipv6_more_malformed_plen_zero.pcapng  linux-endhost-replies-remote-capture.pcap  lost_dns.ips  lost_dns.ips_all  lost_dns.pcap  ndp_solicit_advert.pcapng  network_interface_state--example.json  normal-conn-syn-and-fin.pcap  one-flow-over-2min.pcap  simple_clear_text_with_fins.pcap  simple_websocket_cleartext_remote_probe_replies.pcap  simple_websocket_cleartxt_out_probes.pcap  tcp-with-tx-loss.pcap  windows_get_dnsclientcache.txt  windows_localhost_traffic.pcapng  working_icmp6_neighbor_discovery.pcapng
libconntrack/tests/common/: mod.rs
libconntrack/tests/logs/: probe-report-summary.json
probe-o-matic/: Cargo.toml
probe-o-matic/src/: lib.rs  probe-o-matic-main.rs  probe-o-matic.rs
protobuf/storage-service/: Cargo.toml  build.rs  storage_service.proto
protobuf/storage-service/src/: lib.rs
storage-server/: .gitingore  Cargo.toml
storage-server/src/: extract-ips.rs  extract-router-ips.rs  main.rs  router-graph.rs  storage-server.rs
storage-server/tests/: test_input_connections.sqlite3
tools/: Cargo.toml
tools/pcap-util/: Cargo.toml
tools/pcap-util/src/: sumdump.rs
tools/pingtree/: Cargo.toml
tools/pingtree/sample-inputs/: traceroute-to-google-dns.txt
tools/pingtree/src/: pingtree-main.rs
tools/probe-o-matic/: Cargo.toml
tools/probe-o-matic/src/: lib.rs  probe-o-matic-main.rs
tools/src/: hacky.rs  pcap-util-lib.rs  pcap-util-main.rs  pcap-util.rs  sumdump.rs
web/webserver/: Cargo.toml
web/webserver/html/: index.html  login.html  webtest.html
web/webserver/html/errs/: 403.html
web/webserver/src/: context.rs  http_routes.rs  main.rs
web/webserver/web-client/: Cargo.toml
web/webserver/web-client/src/: lib.rs  utils.rs
webserver/: .gitignore  Cargo.toml  build.rs  production_schema.sql
webserver/common/: Cargo.toml  README.md
webserver/common/src/: analysis_messages.rs  lib.rs
webserver/docs/: DB_ADMIN.md  DB_helpful.md  ROUGH_ARCH_GUIDE.md
webserver/html/: index.html  login.html  webtest.html
webserver/html/errs/: 403.html  404.html
webserver/html/static/: tabs.css
webserver/html/webtest_static/: vantages.json
webserver/netdebug_webui/: .env  package.json
webserver/netdebug_webui/src/: App.tsx  main.tsx
webserver/src/: analyze.rs  cli.rs  congestion_analysis.rs  connection.rs  context.rs  db_utils.rs  desktop_websocket.rs  devices.rs  evicting_hash_map.rs  extract-ips.rs  first_hop_analysis.rs  flow_aggregation.rs  flows.rs  http_routes.rs  in_band_probe.rs  lib.rs  main.rs  mockable_dbclient.rs  organizations.rs  owned_packet.rs  pcap.rs  remotedb_client.rs  rest_routes.rs  router-graph.rs  secrets_db.rs  topology_server.rs  users.rs  utils.rs  webserver_connection_log_wrapper.rs  webserver_passwd_cli.rs  webtest.rs
webserver/tests/: aws-sjc-ist-one-stream.pcap  conn-measurement-conversion-helper.py  db_test_utils.rs  db_utils.rs  freebsd_sack_endhost_ping.pcapng  remote_capture.pcap  test-secrets.toml  test_devices.rs  test_flows.rs  test_http_routes.rs  test_input_connections.sqlite3  test_remotedb_client.rs  test_users.rs
webserver/tests/data/: pingtrees.json  probe-report-summary.json
webserver/web-client/: Cargo.toml  LICENSE_MIT
webserver/web-client/.cargo/: config
webserver/web-client/js/: utils.js
webserver/web-client/src/: chart_bindings.rs  consts.rs  graph.rs  lib.rs  tabs.rs
webserver/web-client/tests/: web.rs
(+178 files in other folders)
