# Top-level Cargo.toml - mostly just tells vscode to look into the subdirectories

[profile.release]
# always build release builds with debug symbols
debug = true

[workspace]
members = [
  "common",
  "desktop",
  "ip-asn-lookup",
  "libconntrack",
  "probe-o-matic",
  "tools",
  "webserver",
  "webserver/web-client",
]
resolver = "2"

[workspace.dependencies]
approx = { version = "0.5.1" }
axum = { version = "0.7" }
console-subscriber = "*"
clap = { version = "4", features = ["derive"] }
derive-getters = "0.3"
indexmap = { version = "2", features = ["serde"] }
linked-hash-map = "0.5.6"
# Use our private fork from main until #42 is merged
mac_address = { git = "https://github.com/netdebug-com/mac_address", branch = "master" }
pcap = "1.1.0"
serde = "1"
thiserror = "1"
typescript-type-def = { git = "https://github.com/gregor-netdebug/rust-typescript-type-def", branch = "ipaddr-support" }
# NOTE: tokio_unstable is a compile-time flag, not a feature
tokio = { version = "*", features = ["full"]}
