[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pls keep in alpha order; use explicit versioning to create hermetic builds
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
desktop_common = { path = "./desktop_common" }
# move back to the public branch once https://github.com/JulianSchmid/etherparse/pull/66 is merged
# NOTE: 0.14.0 looks like it breaks partial IpHeader::from_slice() parsing
# See https://github.com/JulianSchmid/etherparse/issues/46
#etherparse = "0.13.0"
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch="tcp_header"}
futures = "0.3.28"
futures-util = "0.3.28"
libconntrack = {path = "../libconntrack"}
libconntrack-wasm = {path = "../libconntrack-wasm"}
log = "0.4.18"
itertools = "0.11.0"
netstat2 = "0.9.1"
pcap = "1.1.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version="1.28.2", features = ["full"] }
warp = "0.3.5"
webserver = {path = "../webserver"}