[package]
name = "ip-asn-lookup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrt2csv"
path = "src/mrt2csv.rs"

[[bin]]
name = "lookup-ip"
path = "src/lookup-ip.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgp-rs = "0.6.0"
clap = { workspace = true }
csv = "1.3.0"
ip_network_table-deps-treebitmap = "0.5.0"
mrt-rs = "2.0.1"
serde = { version = "1.0.190", features = ["derive", "serde_derive"] }
