[package]
name = "libconntrack-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = [ "serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_with = {version = "3.3.0", features = ["chrono_0_4"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.37"
