[package]
name = "libconntrack-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this should be refactored to move some elements into this library
common-wasm = { path = "../common/wasm" }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
typescript-type-def = "0.5.8"


[dev-dependencies]
wasm-bindgen-test = "0.3.37"
