[package]
name = "libconntrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = {path = "../webserver/common"}  # TODO move this dir to the top level?
chrono = { version = "0.4.26", features = [ "serde"] }
dns-parser = "0.8.0"
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch="tcp_header"}
futures = "0.3.28"
futures-util = "0.3.28"
hashlru =  "0.11.0"
itertools = "0.11.0"
libc = "0.2.146"
libconntrack-wasm = {path = "../libconntrack-wasm"}
log = "0.4.19"
netstat2 = "0.9.1"
pretty_env_logger = "0.5.0"
serde = "1.0.188"
serde_with = {version = "3.3.0", features = ["chrono_0_4"] }
serde_json = "1.0.104"
tokio = { version="1.29.1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
# this gets the capture-stream feature
pcap = { version = "1.1.0", features = ["capture-stream"]}

[target.'cfg(windows)'.dependencies]
# this does not
pcap = { version = "1.1.0", features = []}
