[package]
name = "libconntrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytes = "1.5.0"
common-wasm = { path = "../common/wasm" }             # TODO move this dir to the top level?
chrono = { version = "0.4.26", features = ["serde"] }
# use our own private upstream until they land our qtype=65/https patch
dns-parser = { git = "https://github.com/netdebug-com/dns-parser", branch = "pr47" }
# use our own private upstream until they land our tcp_header patch
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch = "tcp_header" }
futures = "0.3.28"
futures-util = "0.3.28"
itertools = "0.11.0"
libc = "0.2.146"
libconntrack-wasm = { path = "../libconntrack-wasm" }
log = "0.4.19"
netstat2 = "0.9.1"
pb-conntrack-types = { path = "../protobuf/conntrack-types" }
pb-storage-service = { path = "../protobuf/storage-service" }
pretty_env_logger = "0.5.0"
# PublicSufficeList - but statically includes official list from https://publicsuffix.org/
psl = "2.1.4"   
rand = "0.8.5"
serde = "1.0.188"
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.10"
tower = "0.4"

[dev-dependencies]
tokio-stream = "0.1"
tokio = { version = "1.29.1", features = ["test-util"] }
tokio-test = "0.4.3"

[target.'cfg(unix)'.dependencies]
# this gets the capture-stream feature
pcap = { version = "1.1.0", features = ["capture-stream"] }

[target.'cfg(windows)'.dependencies]
# this does not
pcap = { version = "1.1.0", features = [] }
