[package]
name = "probe-o-matic"
version = "0.1.0"
edition = "2021"
default-run = "probe-o-matic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "probe-o-matic"
path = "src/probe-o-matic-main.rs"

[lib]
name = "lib_probe_o_matic"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
etherparse = "0.13"
libconntrack = { path = "../libconntrack" }
log = "0.4.18"
mac_address = "1.1"
tokio = { version = "1.28.2", features = ["full"] }
utils = { path = "../utils" }
