[package]
name = "probe-o-matic"
version = "0.1.0"
edition = "2021"
default-run = "probe-o-matic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "probe-o-matic"
path = "src/probe-o-matic-main.rs"

[lib]
name = "lib_probe_o_matic"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { workspace = true }
common = { path = "../common" }
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch = "tcp_header" }
libconntrack = { path = "../libconntrack" }
log = "0.4.18"
mac_address = "1.1"
priority-queue = "1.3.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.28.2", features = ["full"] }
