[package]
name = "storage-server"
version = "0.1.0"
edition = "2021"
default-run = "storage-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "storage-server"
path = "src/storage-server.rs"

[[bin]]
name = "extract-router-ips"
path = "src/extract-router-ips.rs"

[dependencies]
# pls keep in alpha order
bytes = "1.4"
chrono = "0.4"
clap = { version = "4.4.3", features = ["derive"] }
log = "0.4.18"
pb-conntrack-types = { path = "../protobuf/conntrack-types" }
pb-storage-service = { path = "../protobuf/storage-service" }
prost = "0.12"
rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-rusqlite = "0.4.0"
tonic = "0.10"
utils = { path = "../utils" }

[build-dependencies]
tonic-build = "0.10"
