[package]
name = "storage-server"
version = "0.1.0"
edition = "2021"
default-run = "storage-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "storage-server"
path = "src/storage-server.rs"

[[bin]]
name = "extract-ips"
path = "src/extract-ips.rs"

[[bin]]
name = "router-graph"
path = "src/router-graph.rs"

[dependencies]
# pls keep in alpha order
bytes = "1.4"
chrono = "0.4"
clap = { version = "4.4.3", features = ["derive"] }
common = { path = "../common" }
itertools = "0.11.0"
log = "0.4.18"
pb-conntrack-types = { path = "../protobuf/conntrack-types" }
pb-storage-service = { path = "../protobuf/storage-service" }
prost = "0.12"
prost-types = "0.12"
rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
serde = "1.0.188"
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
serde_json = "1.0.104"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rusqlite = "0.4.0"
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
