[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
default-run = "webserver" # needed as we have multiple binaries

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# main webserver binary, but just the wrapper around the libwebserver
name = "webserver"
path = "src/main.rs"

[lib]
# almost all code lives here, eases testing to have in a library
name = "libwebserver"
path = "src/lib.rs"

[[bin]]
# CLI utility for mananging passwords
name = "webserver_passwd"
path = "src/webserver_passwd_cli.rs"
required-features = ["cli"]

[[bin]]
# CLI utility for mananging passwords
name = "netdebug_cli"
path = "src/cli.rs"
## Consider uncommenting if we want to improve build speeds
# required-features = ["cli"]

[features]
cli = []

[dependencies]
# pls keep in alpha order
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
common = { path = "../common" }
common-wasm = { path = "../common/wasm" }
# move back to the public branch once https://github.com/JulianSchmid/etherparse/pull/66 is merged
# NOTE: 0.14.0 looks like it breaks partial IpHeader::from_slice() parsing
# See https://github.com/JulianSchmid/etherparse/issues/46
#etherparse = "0.13.0"
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch = "tcp_header" }
futures = "0.3.28"
futures-util = "0.3.28"
libconntrack = { path = "../libconntrack" }
log = "0.4.18"
itertools = "0.11.0"
pb-conntrack-types = { path = "../protobuf/conntrack-types" }
pb-storage-service = { path = "../protobuf/storage-service" }
pcap = "1.1.0"
pwhash = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3.5"
indexmap = { version = "2.1.0", features = ["serde"] }
