[package]
name = "common-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
itertools = "*"
linked-hash-map = "0.5.6"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
typescript-type-def = "0.5.8"
