# Everything in this package must compile for both native rust *and* WASM
[package]
name = "desktop_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
common-wasm = { path = "../../common/wasm" }
itertools = "*"
libconntrack-wasm = { path = "../../libconntrack-wasm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
typescript-type-def = "0.5.8"
