[package]
name = "web-gui"
version = "0.1.0"
authors = ["Rob Sherwood <rob.sherwood@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4.27", features = ["wasmbind"] }
desktop_common = { path = "../desktop_common" }
libconntrack-wasm = { path = "../../libconntrack-wasm" }
serde = {version = "1.0.188", features = [ "derive"]}
serde_json = "1.0.96"
serde_with = "3.3.0"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

## Disable for now due to:
## "warning: profiles for the non root package will be ignored, specify profiles at the workspace root:"
## Fix later
#
#[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

# separate out web-sys deps as they are so complicated
[dependencies.web-sys]
version = "0.3.46"
features = [
  'BinaryType',
  'Blob',
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'ErrorEvent',
  'FileReader',
  'Geolocation',
  'Headers',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  # Just use the raw element access... 
  #    'HtmlTableElement',
  #    'HtmlTableRowElement',
  #    'HtmlTableSectionElement',
  'HtmlTextAreaElement',
  'Location',
  'MessageEvent',
  'Node',
  'Performance',
  'ProgressEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WebSocket',
]
