[package]
name = "pb-storage-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pls keep in alpha order
pb-conntrack-types = { path = "../conntrack-types" }
prost = "0.12"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
