[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcap-util"
path = "src/pcap-util-main.rs"

[lib]
name = "pcap_util_lib"
path = "src/pcap-util-lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
etherparse = { git = "https://github.com/robs-zeynet/etherparse", branch = "tcp_header" }
common = { path = "../../common" }
common-wasm = { path = "../../common/wasm" }
indexmap = { workspace = true }
libconntrack = { path = "../../libconntrack" }
libconntrack-wasm = { path = "../../libconntrack-wasm" }
pcap = { workspace = true }
tokio = { version = "1.28.2", features = ["full"] }
strum = "0.26.2"
strum_macros = "0.26.2"
