[package]
name = "pingtree"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pingtree"
path = "src/pingtree-main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
common = { path = "../../common" }
common-wasm = { path = "../../common/wasm" }
libconntrack = { path = "../../libconntrack" }
libconntrack-wasm = { path = "../../libconntrack-wasm" }
log = "0.4"
mac_address = { workspace = true }
tokio = { workspace = true, features = ["full"] }
