[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pls keep in alpha order
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.18"
pretty_env_logger = "0.5.0"
tokio = { version="1.28.2", features = ["full"] }
warp = "0.3.5"
