[package]
name = "netdebug-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
tauri = { version = "1.4", features = ["updater", "shell-open"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webserver = { path = "../../webserver" }
libconntrack = { path = "../../libconntrack" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
